--- a/app/views/charity_mailer/charity_accepted_email.html.erb
+++ b/app/views/charity_mailer/charity_accepted_email.html.erb
@@ -12,9 +12,24 @@
     <p>
       Dear <%= @application.full_name %>,
     </p>
-    <p>
-      We are delighted to inform you that your application to TOCA Cares has been approved!
-    </p>
+
+    <% vote = Vote.where(application_type: @application.application_type, application_id: @application.id, seconded: true).first %>
+    <% if @application.final_decision == "Approved with Modifications" %>
+      <p>
+        We are delighted to inform you that your application to TOCA Cares has been approved with the following modifications:
+        <ul>
+            <li><%= vote.modification %></li>
+          <% if vote.suggest_loan %>
+            <li>Loan Suggested: <%= vote.describe_loan %></li>
+          <% end %>
+        </ul>
+      </p>
+    <% else %>
+      <p>
+        We are delighted to inform you that your application to TOCA Cares has been approved!
+      </p>
+    <% end %>
+
     <p>
       You will soon be contacted by our partnering organization, Helping Hands, who will reach out to you and request additional information pertaining to the charity and bill. Once verified, Helping Hands will pay the agreed amount of your bill directly in a confidential and secure process. Please keep in mind that your response time to Helping Hands’ inquiries will determine the speed of the process. TOCA Cares is glad we can assist valued employees like you.
     </p>
