--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -107,7 +107,7 @@
 
 
 
-
+  <div class="my-5">
     <h2 class="text-center toca-uppercase color-toca-red mt-5">My Messages</h2>
     <%= link_to home_messages_path, style: "display: inline-block", class: "btn btn-secondary my-0 btn-lg btn-block" do %>
       <% if @my_total_messages.count != 0 %>
@@ -115,7 +115,7 @@
       <% end %>
       View My Open Message Threads
     <% end %>
-
+  </div>
 
 
 
