--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -99,10 +99,10 @@ h5 a {
 }
 
 /* LARGE SCREEN FONTS */
-@media (min-width: 1200px) {
+@media (min-width: 1140px) {
   h1 { font-size: 3.5em; }
-  p, li { font-size: 1.5rem; font-weight: 300 !important; }
-  .card .card-body .card-text { font-size: 1.2rem; font-weight: 300; }
+  p, li { font-size: 1.5rem; font-weight: 300 !important; line-height: 1.3; }
+  .card .card-body .card-text { font-size: 1.2rem; font-weight: 300 }
 }
 
 
@@ -130,25 +130,7 @@ html { scroll-behavior: smooth; }
 
 * { border-radius: 0px !important; }
 
-form.button_to {
-  display: inline;
-}
-
-.not-button {
-  border: none;
-  background-color: transparent;
-  color: $color-toca-red;
-  font-weight: bold;
-  display: inline;
-  margin: 0;
-  padding: 0;
-}
-
-img { max-width: 100%; }
-
-.startHidden { display: none; }
-
-.thin-white-box { border: thin white solid; }
+.image-cover { object-fit: cover; }
 
 .link-cursor { cursor: pointer; }
 .linkish {
@@ -156,6 +138,10 @@ img { max-width: 100%; }
   color: $color-toca-red;
   font-weight: 700;
 }
+
+img { max-width: 100%; }
+
+.startHidden { display: none; }
 
 .alert { margin-bottom: 0px; }
 .alert-success { color: $color-dark-grey; background-color: $transparent-green; border-color: $transparent-green;}
@@ -174,13 +160,85 @@ img { max-width: 100%; }
   margin-right: 10px;
 }
 
+.thin-white-box { border: thin white solid; }
+
 .ball-mini {
   height: 100px;
+  width: auto;
 }
 
 .ball-character {
   height: 150px;
+  width: auto;
 }
+
+
+
+
+
+
+
+
+/*-----------------------------
+-------------------------------
+-------------INDEX-------------
+-------------------------------
+-------------------------------
+-----------------------------*/
+
+.three-callout-jarallax { height: 1700px; }
+.three-callout-image { height: 250px }
+
+@media (min-width: 540px) {
+  .three-callout-jarallax { height: 1200px; }
+  .three-callout-image { height: 325px }
+}
+
+@media (min-width: 1140px) {
+  .three-callout-jarallax { height: 1200px; }
+  .three-callout-image { height: 325px }
+}
+
+
+
+
+
+
+/*-----------------------------
+-------------------------------
+-------------FORMS-------------
+-------------------------------
+-------------------------------
+-----------------------------*/
+
+form.button_to {
+  display: inline;
+}
+
+.not-button {
+  border: none;
+  background-color: transparent;
+  color: $color-toca-red;
+  font-weight: bold;
+  display: inline;
+  margin: 0;
+  padding: 0;
+}
+
+.select-box {
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
+  padding: 10px 15px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.select-box.active {
+  background-color: $color-toca-green;
+  box-shadow: 0 16px 28px 0 rgba(0, 0, 0, 0.22), 0 25px 55px 0 rgba(0, 0, 0, 0.21) !important;
+}
+
+
+
 
 
 
