--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -7,7 +7,7 @@
       <% @messages.each do |message| %>
         <h4 class="mb-0"><%= link_to message.subject, message_path(message) %></h4>
         <p>
-          <em>Regarding <%= message.ref_application_type.capitalize %> Application #<%= message.ref_application_id %></em>
+          <em>Regarding <%= link_to message_path(message) do %><%= message.ref_application_type.capitalize %> Application #<%= message.ref_application_id %><% end %></em>
           <br>
           Original Message Sent by
           <strong>
